--- a/lessons/basics/03_phrases.html
+++ b/lessons/basics/03_phrases.html
@@ -23,7 +23,7 @@ title: Elisa's Duo Polski - Basic Phrases
 
         <h3> Phrases - Zwroty </h3>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <thead>
               <tr>
                 <th>In Polish<br>Po polsku</th>
@@ -43,11 +43,11 @@ title: Elisa's Duo Polski - Basic Phrases
                 <tr><td>Dobranoc    </td> <td>Goodnight (before sleeping)</td></tr>
                 <tr><td>Przepraszam </td> <td>Sorry</td></tr>
             </tbody>
-        </table>
+        </table></div>
 
         <h3>  Nouns - Rzeczowniki </h3>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <thead>
               <tr>
                 <th></th>
@@ -62,13 +62,13 @@ title: Elisa's Duo Polski - Basic Phrases
                 <tr><td>♂</td> <td>Język hiszpański </td> <td>Spanish Language</td></tr>
                 <tr><td>♂</td> <td>Język japoński   </td> <td>Japanese Language</td></tr>
             </tbody>
-        </table>
+        </table></div>
 
         <h3> Verbs - Czasowniki </h3>
 
         <span class="section">Present tense - Czas Teraźniejszy </span>
 
-        <table>
+        <div class="table-wrap"><table>
             <thead>
                 <tr>
                     <th rowspan="3">English verb<br><br>Czasownik <br>po angielsku</th>
@@ -105,7 +105,7 @@ title: Elisa's Duo Polski - Basic Phrases
                     <td>mówią</td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
     </div>
     <div class="regular">
@@ -118,7 +118,7 @@ title: Elisa's Duo Polski - Basic Phrases
 
         The noun (language) will drop its <span class="blue-text">i</span> and change into <span class="red-text">u</span> in an archaic Dative form that is used for this case.</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td>Polsk<span class="blue-text">i</span></td>
                 <td>Ja mówię po polsk<span class="red-text">u</span></td>
                 <td>I speak (in) Polish</td>
@@ -135,15 +135,15 @@ title: Elisa's Duo Polski - Basic Phrases
                 <td>Ja mówię po japońsk<span class="red-text">u</span></td>
                 <td>I speak (in) Japanese</td>
             </tr>
-        </table>
+        </table></div>
 
         <h3> They say [phrase] - One mówią [zwroty] </h3>
 
         <p>We can just append the phrase to 'They say', 'She says', etc, to relay a message.</p>
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td>Ona mówi dobranoc</td><td>She says goodnight</td></tr>
             <tr><td>One mówią cześć</td><td>They say hello</td></tr>
-        </table>
+        </table></div>
             <!--<p>Ona mówi dobranoc - She says goodnight
             One mówią cześć - They say hello</p> -->
     </div>
