--- a/lessons/basics/04_animals_1.html
+++ b/lessons/basics/04_animals_1.html
@@ -28,7 +28,7 @@ title: Elisa's Duo Polski - Animals 1
 
         <p> Male nouns - Rzeczowniki męskie </p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <thead>
               <tr>
                 <th></th>
@@ -47,11 +47,11 @@ title: Elisa's Duo Polski - Animals 1
                 <tr><td>♂</td> <td>Krab</td> <td>Crab</td></tr>
                 <tr><td>♂</td> <td>Pająk</td> <td>Spider</td></tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p>Female nouns - Rzeczowniki żeńskie:</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <thead>
               <tr>
                 <th></th>
@@ -64,11 +64,11 @@ title: Elisa's Duo Polski - Animals 1
                 <tr><td>♀</td> <td>Mysz</td> <td>Mouse</td></tr>
                 <tr><td>♀</td> <td>Ryba</td> <td>Fish</td></tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p> Neuter nouns - Rzeczowniki nijakie </p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <thead>
               <tr>
                 <th></th>
@@ -79,13 +79,13 @@ title: Elisa's Duo Polski - Animals 1
             <tbody>
                 <tr><td>⚲</td> <td>Zwierzę</td> <td>Animal *</td></tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p>* Technically it’s in the Defining lesson, but let’s see it here as well</p>
 
         <span class="section">Examples - Przykłady: </span>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tbody>
                 <tr><td>Pies i kot</td> <td> A dog and a cat</td></tr>
                 <tr><td>Ptak je chleb</td> <td> The bird is eating bread</td></tr>
@@ -93,7 +93,7 @@ title: Elisa's Duo Polski - Animals 1
                 <tr><td>Krab je ciasteczka</td> <td> The crab is eating cookies</td></tr>
                 <tr><td>Kot pije wodę</td> <td> The cat is drinking water</td></tr>
             </tbody>
-        </table>
+        </table></div>
 
     </div>
 
