--- a/lessons/basics/05_food_1.html
+++ b/lessons/basics/05_food_1.html
@@ -23,7 +23,7 @@ title: Elisa's Duo Polski - Food 1
 
         <h3>  Nouns - Rzeczowniki </h3>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <thead>
               <tr>
                 <th></th>
@@ -51,7 +51,7 @@ title: Elisa's Duo Polski - Food 1
                 <tr><td>pl. ♂</td> <td>Owoce</td> <td>Fruits *</td></tr>
                 <tr><td>⚲</td> <td>Warzywo</td> <td>Vegetable **</td></tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p>* Owoce was in the duolingo lesson, although its singular form is Owoc
         ** Technically it is introduced in the next lesson (Defining), but it’s food so let’s put it here.
@@ -59,7 +59,7 @@ title: Elisa's Duo Polski - Food 1
         Review a few from before
         </p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <thead>
               <tr>
                 <th></th>
@@ -77,7 +77,7 @@ title: Elisa's Duo Polski - Food 1
                 <tr><td>⚲</td>     <td>Jabłko</td> <td>Apple</td></tr>
                 <tr><td>⚲</td>     <td>Mleko</td> <td>Milk</td></tr>
             </tbody>
-        </table>
+        </table></div>
 
         <h3> Adjectives - Przymiotniki </h3>
 
@@ -86,7 +86,7 @@ title: Elisa's Duo Polski - Food 1
         Adjectives in polish have to follow declension depending on the gender. For now, we just need to know the nominative (<span class="violet-text">mianownik</span>) form of tasty. For more detail you can see the later lesson on adjectives or go to the following link: 
         <a href="https://mowicpopolsku.com/polish-grammar/word-classes/adjectives/#declension">https://mowicpopolsku.com/polish-grammar/word-classes/adjectives/#declension</a></p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <thead>
               <tr>
                 <th></th>
@@ -99,14 +99,14 @@ title: Elisa's Duo Polski - Food 1
                 <tr><td>♀</td> <td>Smaczna</td> <td>Tasty</td></tr>
                 <tr><td>⚲</td> <td>Smaczne</td> <td>Tasty</td></tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p>In order to search for it in the dictionary, you have to use the male declension.</p>
 
         <h2> Grammar practice - Ćwiczenia gramatyczne </h2>
 
         <span class="section"> Plain Adjectives:</span>
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tbody>
                 <tr><td>Smaczna kanapka</td>
                     <td>Tasty sandwich.</td>
@@ -118,10 +118,10 @@ title: Elisa's Duo Polski - Food 1
                     <td>Tasty wine</td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <span class="section"> Nominative (Być):</span>
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tbody>
                 <tr><td>Zupa jest smaczna</td>
                     <td>The soup is tasty.</td>
@@ -130,10 +130,10 @@ title: Elisa's Duo Polski - Food 1
                     <td>Breakfast is tasty.</td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <span class="section"> Accusative (Biernik):</span>
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tbody>
                 <tr><td>Jem śniadanie i kolacj<span class="red-text">ę</span></td>
                     <td>I eat breakfast and dinner.</td>
@@ -148,7 +148,7 @@ title: Elisa's Duo Polski - Food 1
                     <td>The man has a tomato</td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
         * The accusative (<span class="violet-text">biernik</span>) of <span class="violet-text">pomidor</span> would be just <span class="blue-text">pomidor</span> according to the rules, but as an exception to the rule, its declension is <span class="red-text">pomidora</span>.
         There are many exceptions, a list of some is here: 
