--- a/lessons/basics/06_defining.html
+++ b/lessons/basics/06_defining.html
@@ -23,7 +23,7 @@ title: Elisa's Duo Polski - Defining
 
         <h3>  Nouns - Rzeczowniki </h3>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <thead>
               <tr>
                 <th></th>
@@ -36,7 +36,7 @@ title: Elisa's Duo Polski - Defining
                 <tr><td>⚲</td> <td>Warzywo</td> <td>Vegetable</td></tr>
                 <tr><td>⚲</td> <td>Zwierzę</td> <td>Animal</td></tr>
             </tbody>
-        </table>
+        </table></div>
 
         <h2> Grammar - Gramatyka </h2>
 
@@ -50,7 +50,7 @@ title: Elisa's Duo Polski - Defining
 
         <h4> Positive (X to Y): </h4>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tbody>
                 <tr><td>Lew to kot</td>
                     <td>A lion is a cat.</td>
@@ -62,11 +62,11 @@ title: Elisa's Duo Polski - Defining
                     <td>A dog is an animal.</td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <h4> Question (Czy X to Y?): </h4>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tbody>
                 <tr><td>Czy pająk to zwierzę?</td>
                     <td>Is a spider an animal?</td>
@@ -75,11 +75,11 @@ title: Elisa's Duo Polski - Defining
                     <td>Is a tomato a vegetable?</td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <h4> Negative (X to nie Y): </h4>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tbody>
                 <tr><td>Jabłko to nie zwierzę</td>
                     <td>An apple is not an animal.</td>
@@ -91,7 +91,7 @@ title: Elisa's Duo Polski - Defining
                     <td>A cat is not a human.</td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
     </div>
     <div class="emphasis-gray">
@@ -102,7 +102,7 @@ title: Elisa's Duo Polski - Defining
 
         <h4> Positive (X jest Y): </h4>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tbody>
                 <tr><td>Jesteś człowiekiem!</td>
                     <td>You are a human!</td>
@@ -114,11 +114,11 @@ title: Elisa's Duo Polski - Defining
                     <td>The spider is an animal.</td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <h4> Negative (X nie jest Y): </h4>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tbody>
                 <tr><td>Jabłko nie jest zwierzęciem</td>
                     <td>The apple is not an animal.</td>
@@ -127,7 +127,7 @@ title: Elisa's Duo Polski - Defining
                     <td>No, he is not a dog.</td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p>As we said before, when using the verb <span class="violet-text">być</span>, the instrumental case comes into use. This lesson introduces a few more inflections for our nouns. Let’s also revise the ones we saw before.</p>
 
@@ -140,7 +140,7 @@ title: Elisa's Duo Polski - Defining
 
         <span class="section">All masculine nouns in Instrumental have the ending -<span class="red-text">em</span></span></p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tbody>
                 <tr><td> Kot </td>
                     <td> Lew jest kot<span class="red-text">em</span></td>
@@ -151,7 +151,7 @@ title: Elisa's Duo Polski - Defining
                     <td>A lion is not a tiger.</td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p><span class="section">Masculines with diphthong <span class="blue-text">ie</span></span>
 
@@ -159,7 +159,7 @@ title: Elisa's Duo Polski - Defining
 
         <span class="blue-text">ie</span> → <span class="red-text">em</span></p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tbody>
                 <tr><td> Chłop<span class="blue-text">ie</span>c </td>
                     <td> On jest chłopc<span class="red-text">em</span></td>
@@ -170,20 +170,20 @@ title: Elisa's Duo Polski - Defining
                     <td>I am a dog.</td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p><span class="section">Masculines ending with -<span class="blue-text">ś</span>, -<span class="blue-text">ć</span>, -<span class="blue-text">ń</span>, -<span class="blue-text">ź</span></span>
 
         The soft sounding -<span class="blue-text">ś</span>, -<span class="blue-text">ć</span>, -<span class="blue-text">ń</span>, -<span class="blue-text">ź</span> will be replaced by their phonological match, -<span class="blue-text">si</span>, -<span class="blue-text">ci</span>, -<span class="blue-text">ni</span>, -<span class="blue-text">zi</span> in the instrumental case. Then the instrumental -<span class="red-text">em</span> will be added.</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tbody>
                 <tr><td> Ko<span class="blue-text">ń</span> </td>
                     <td> Jesteś ko<span class="blue-text">ni</span><span class="red-text">em</span></td>
                     <td>You are a horse.</td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p><span class="section">Masculines ending with -<span class="blue-text">g</span> or -<span class="blue-text">k</span></span>
 
@@ -192,7 +192,7 @@ title: Elisa's Duo Polski - Defining
         <span class="blue-text">k</span> → <span class="blue-text">k</span><span class="red-text">iem</span>
         <span class="blue-text">g</span> → <span class="blue-text">g</span><span class="red-text">iem</span></p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tbody>
                 <tr><td> Chłopa<span class="blue-text">k</span> </td>
                     <td> Jesteś chłopa<span class="blue-text">k</span><span class="red-text">iem</span></td>
@@ -203,7 +203,7 @@ title: Elisa's Duo Polski - Defining
                     <td>You are a human.</td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p><span class="section">Masculines and Feminines ending with -<span class="blue-text">a</span></span>
 
@@ -211,7 +211,7 @@ title: Elisa's Duo Polski - Defining
         
         <span class="blue-text">a</span> → <span class="red-text">ą</span></p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tbody>
                 <tr><td> Mężczyzn<span class="blue-text">a</span>  </td>
                     <td> On jest mężczyzn<span class="red-text">ą</span></td>
@@ -226,7 +226,7 @@ title: Elisa's Duo Polski - Defining
                     <td>She is a girl.</td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p><span class="section">Neuters ending with -<span class="blue-text">ę</span></span>
 
@@ -239,13 +239,13 @@ title: Elisa's Duo Polski - Defining
 
         <p>For now we just need to know one: Animal - Zwierz<span class="blue-text">ę</span></p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tbody>
                 <tr><td> Zwierz<span class="blue-text">ę</span> </td>
                     <td> Tygrys jest zwierz<span class="blue-text">ę</span><span class="red-text">ciem</span></td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p><span class="section">Feminine and Masculine personal ending with -<span class="blue-text">a</span></span>
 
@@ -253,7 +253,7 @@ title: Elisa's Duo Polski - Defining
 
         <span class="blue-text">a</span> → <span class="red-text">ą</span></p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tbody>
                 <tr><td> Mężczyzn<span class="blue-text">a</span>  </td>
                     <td> On jest mężczyzn<span class="red-text">ą</span></td>
@@ -268,7 +268,7 @@ title: Elisa's Duo Polski - Defining
                     <td>She is a girl.</td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
     </div>
 
     <div class="nav-buttons">
