--- a/lessons/basics/07_demonstrating.html
+++ b/lessons/basics/07_demonstrating.html
@@ -29,7 +29,7 @@ title: Elisa's Duo Polski - Demonstrating
         There is a full guide of this at Clozemaster, but for now let's see what's in the lesson currently. 
         (<a href="https://www.clozemaster.com/blog/polish-demonstrative-pronouns/">https://www.clozemaster.com/blog/polish-demonstrative-pronouns/</a>)</p>
 
-        <table>
+        <div class="table-wrap"><table>
             <thead>
               <tr>
                 <th colspan="4" style="text-align:center;">Singular - Liczba pojedyncza<br><br>Nominative - Mianownik</th>
@@ -75,7 +75,7 @@ title: Elisa's Duo Polski - Demonstrating
                 <td style="text-align: right; padding-right: 0.5em;"> ♀ that</td>
               </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p>To give it distance, we just add the <span class="red-text">tam</span>- suffix to it. In Clozemaster, they make an interesting point. The simplest way to express the difference between ten and tamten would probably be:
 
@@ -98,13 +98,13 @@ title: Elisa's Duo Polski - Demonstrating
         To jabłko - This apple
         </p>
         
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td>Tamta mysz je śniadanie.</td>           <td>That mouse is eating breakfast.</td></tr>
             <tr><td>Tamten mężczyzna jest człowiekiem.</td> <td>That man is human.</td></tr>
             <tr><td>Tamta dziewczyna jest kotem.</td>       <td>That girl is a cat.</td></tr>
             <tr><td>Tamto dziecko nie jest człowiekiem.</td><td>That child is not human. </td></tr>
             <tr><td>Ten pomidor jest smaczny.</td>          <td>This tomato is tasty.</td></tr>
-        </table>
+        </table></div>
 
         <p>
         And so on.
@@ -122,7 +122,7 @@ title: Elisa's Duo Polski - Demonstrating
 
         <span class="section"> For example - Na przykład </span></p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td>Pijesz tamt<span class="red-text">ą</span> herbat<span class="red-text">ę</span></td>
                 <td>You are drinking that tea.</td>
             </tr>
@@ -144,7 +144,7 @@ title: Elisa's Duo Polski - Demonstrating
             <tr><td>Mam te<span class="red-text">go*</span> pomidor<span class="red-text">a**</span></td>
                 <td>I have this tomato.</td>
             </tr>
-        </table>
+        </table></div>
 
         <p><span class="red-text">*</span> In accusative, male pronouns get split into inanimate and animate objects, ten / tego
         <span class="red-text">**</span> Pomidor / Pomidor<span class="red-text">a</span> was discussed earlier as an exception to accusative rules. This is because tomatoes, among other exceptions, are somehow animate objects in Poland.
@@ -152,7 +152,7 @@ title: Elisa's Duo Polski - Demonstrating
         Below is a table of the basic demonstrative pronouns in accusative (<span class="violet-text">biernik</span>), and in singular (liczba pojedyncza).
         </p>
 
-        <table>
+        <div class="table-wrap"><table>
             <thead>
               <tr>
                 <th colspan="3">Singular - Liczba pojedyncza<br><br>Accusative - Biernik</th>
@@ -199,13 +199,13 @@ title: Elisa's Duo Polski - Demonstrating
                 <td>tamt<span class="red-text">ą</span></td>
               </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p>Note the difference between masculine inanimate, and masculine animate objects. This comes into practice later on in Duolingo, but currently I don’t know where to put it, since this lesson would be the most appropriate place to do it. Let’s practice some:
 
         <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span></p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td>Mam te<span class="red-text">go</span> ps<span class="red-text">a</span>.</td>
                 <td>I have this dog.</td>
             </tr>
@@ -221,7 +221,7 @@ title: Elisa's Duo Polski - Demonstrating
             <tr><td>Ten pająk je tamte<span class="red-text">go</span> ptak<span class="red-text">a</span></td>
                 <td>This spider is eating that bird.</td>
             </tr>
-        </table> 
+        </table></div> 
 
         <p>Now you’re probably thinking, how did that chłopc<span class="red-text">a</span>, ps<span class="red-text">a</span>, ko<span class="red-text">nia</span>, ptak<span class="red-text">a</span> and kot<span class="red-text">a</span> change? Well, as we said before, in accusative (<span class="violet-text">biernik</span>), males don’t have a specific rule, but they can stay in their nominative (<span class="violet-text">mianownik</span>) forms, or change into genitive (<span class="violet-text">dopełniacz</span>) form. For more detail you can see the link below. However, as a general rule, add the ending -<span class="red-text">a</span>, and remove -<span class="blue-text">ie</span> whenever it appears, as well as changing soft letters into their phonological match (<b>-ś</b>, <b>-ć</b>, <b>-ń</b>, <b>-ź</b> to <b>-si</b>, <b>-ci</b>, <b>-ni</b>, <b>-zi</b>).
 
