--- a/lessons/basics/08_adjectives_1.html
+++ b/lessons/basics/08_adjectives_1.html
@@ -23,7 +23,7 @@ title: Elisa's Duo Polski - Adjectives 1
 
         <p>As we said before in the Food lesson, in order to search for it in the dictionary, you have to use the male declension of the nominative case of an adjective, so that's what I'll list under here for vocabulary.</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <thead>
               <tr>
                 <th></th>
@@ -40,7 +40,7 @@ title: Elisa's Duo Polski - Adjectives 1
                 <tr><td>♂</td><td>Stary </td> <td>Old</td></tr>
                 <tr><td>♂</td><td>Smaczny </td> <td>Tasty</td></tr>
             </tbody>
-        </table>
+        </table></div>
 
         <h2> Grammar - Gramatyka </h2>
 
@@ -54,15 +54,15 @@ title: Elisa's Duo Polski - Adjectives 1
 
         We can use adjectives before a noun (attributive), for example:</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td> The big dog eats meat </td><td> <span class="red-text">Duży</span> <span class="blue-text">pies</span> je mięso </td></tr>
-        </table>
+        </table></div>
 
         <p>You can also use the adjective after the noun in the predicate of the sentence (predicative), for example:</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td> This cat is small </td><td> Ten <span class="blue-text">kot</span> jest <span class="red-text">mały</span></td></tr>
-        </table>
+        </table></div>
 
         <p>Now, notice how they follow the case of the noun: If the noun is in nominative, the adjective is in nominative. This means that if we were to say "I am a good human - Jestem dobr<span class="red-text">ym</span> człowiek<span class="red-text">iem</span>", we would have to use the instrumental (<span class="violet-text">narzędnik</span>) case, and that if we were to say “I am drinking this good tea - Piję tę dobr<span class="red-text">ą</span> herbat<span class="red-text">ę</span>”, we would have to use the accusative (<span class="violet-text">biernik</span>) case. In this lesson, however, we are only using the nominative (<span class="violet-text">mianownik</span>).
 
@@ -75,28 +75,28 @@ title: Elisa's Duo Polski - Adjectives 1
 
         For <b>masculine</b> adjectives, the suffix is -<span class="red-text">y</span>. The exception being if the stem ends in -<span class="blue-text">k</span> or -<span class="blue-text">g</span>, in which case the suffix will be -<span class="red-text">i</span>. For example: duż<span class="red-text">y</span>, wyso<span class="blue-text">k</span><span class="red-text">i</span>, dro<span class="blue-text">g</span><span class="red-text">i</span>. Although for now this is in neither of the vocabulary for the lesson. 
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td>Ten pies jest dobr<span class="red-text">y</span>.</td><td>This dog is good.</td></tr>
             <tr><td>Tamten chłopiec jest zł<span class="red-text">y</span>.</td><td>That boy is evil.</td></tr>
             <tr><td>Ten ser jest smaczn<span class="red-text">y</span>!</td><td>This cheese is good!</td></tr>
-        </table>
+        </table></div>
         
 
         For <b>feminine</b> adjectives, the suffix is -<span class="red-text">a</span>.
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td>Ta jest dobr<span class="red-text">a</span> herbata.</td><td>This is good tea.</td></tr>
             <tr><td>Tamta kawa jest star<span class="red-text">a</span>.</td><td> That coffee is old.</td></tr>
             <tr><td>Duż<span class="red-text">a</span> mysz je ser.</td><td>The big mouse is eating cheese.</td></tr>
-        </table>
+        </table></div>
         
 
         For <b>neuter</b> adjectives, the suffix is -<span class="red-text">e</span>.
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td>Now<span class="red-text">e</span> wino nie jest smaczn<span class="red-text">e</span>.</td><td>The new wine is not tasty.</td></tr>
             <tr><td>Tamto zwierzę jest duż<span class="red-text">e</span></td><td>That animal is big.</td></tr>
-        </table>
+        </table></div>
     </div>
 
     <div class="regular">
@@ -107,37 +107,37 @@ title: Elisa's Duo Polski - Adjectives 1
 
         The suffix for inanimate objects is exactly as with the nominative, it is still -<span class="red-text">y</span>/-<span class="red-text">i</span> depending on the stem (-<span class="blue-text">k</span> and -<span class="blue-text">g</span> for -<span class="red-text">i</span>, the rest with -<span class="red-text">y</span>).</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td>Jem duż<span class="red-text">y</span> obiad.</td><td>I am eating a big lunch.</td></tr>
             <tr><td>Piję dobr<span class="red-text">y</span> sok.</td><td>I am drinking a good juice.</td></tr>
-        </table>
+        </table></div>
 
         <p>For <span class="pink-text">animate</span> objects, we will be using the genitive, a case we haven't seen yet.
         The suffix for <span class="pink-text">animate</span> objects is -<span class="red-text">ego</span>.</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td>Tamta stara kobieta je zł<span class="red-text">ego</span> chłopc<span class="red-text">a</span>.</td><td>That old woman is eating a bad boy.</td></tr>
             <tr><td>Mam duż<span class="red-text">ego</span> ps<span class="red-text">a</span>.</td><td>I have a big dog.</td></tr>
             <tr><td>Lubię te<span class="red-text">go</span> mał<span class="red-text">ego</span> kot<span class="red-text">a</span>.</td><td>I like this small cat.</td></tr>
             <tr><td>Jem duż<span class="red-text">ego</span> pomidor<span class="red-text">a</span>*.</td><td>I am eating a big tomato.</td></tr>
-        </table>
+        </table></div>
 
         <p>* Remember how our friends the tomatoes are an exception and are somehow <span class="pink-text">animate</span> objects in Poland.
 
         For <b>feminine</b> adjectives, the suffix is -<span class="red-text">ą</span>.</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td>Jem dobr<span class="red-text">ą</span> kanapk<span class="red-text">ę</span>.</td><td>I am eating a good sandwich.</td></tr>
             <tr><td>Piję dobr<span class="red-text">ą</span> herbat<span class="red-text">ę</span>.</td><td>I am drinking a good tea.</td></tr>
             <tr><td>Mam zł<span class="red-text">ą</span> kaczk<span class="red-text">ę</span></td><td>I have an evil duck.</td></tr>
-        </table>
+        </table></div>
 
         <p>For <b>neuter</b> adjectives, the suffix is -<span class="red-text">e</span>.</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td>Piję dobr<span class="red-text">e</span> wino i jem dobry ser.</td><td>I am drinking good wine and eating a good cheese.</td></tr>
             <tr><td>Mam duż<span class="red-text">e</span> warzywo.</td><td>I have a big vegetable. </td></tr>
-        </table>
+        </table></div>
     </div>
 
     <div class="regular">
@@ -151,7 +151,7 @@ title: Elisa's Duo Polski - Adjectives 1
 
         I would recommend it for the instrumental case, which we already saw in previous lessons, but I haven’t seen it used in Duolingo in the lessons near this one.</p>
 
-        <table>
+        <div class="table-wrap"><table>
             <thead>
               <tr>
                 <th rowspan="2">Case<br><br>Przypadek</th>
@@ -212,7 +212,7 @@ title: Elisa's Duo Polski - Adjectives 1
                 <td colspan="2">-ych/ich</td>
               </tr>
             </tbody>
-        </table>
+        </table></div>
 
     </div>
 
