--- a/lessons/checkpoint_1/10_clothing.html
+++ b/lessons/checkpoint_1/10_clothing.html
@@ -23,7 +23,7 @@ title: Elisa's Duo Polski - Clothing
 
         <h3> Nouns - Rzeczowniki </h3>
 
-        <table class="vocab-table">
+        <div class="table-wrap"><table class="vocab-table">
             <thead>
               <tr>
                 <th rowspan="2"></th>
@@ -53,18 +53,18 @@ title: Elisa's Duo Polski - Clothing
               <tr><td colspan="3">pl. nmp.</td><td>Spodnie</td><td>Trousers</td></tr>
               <tr><td colspan="3">pl. nmp.</td><td>Majtki</td><td>Underwear, panties, underpants</td></tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p>We notice that we have our first non-masculine personal nouns that are so just by default. These are nouns that are hardly ever used in singular. Have you heard of a single trouser? Most likely you always wear a <i>pair</i> of trousers, or a <i>pair</i> of panties, not a single panty. So in the same fashion, these words aren’t particularly feminine or neuter, just… non-masculine personal. By the way, since ubrania is neuter and not nmp. you might wonder “what is the singular of clothes?” And the answer to that would be ubranie - a single outfit. Not that it is in this lesson but I thought it interesting.
 
         * We have seen words like this before, and it’s another topic of Polish grammar. How to make things tiny or cute. It’s not this lesson’s content, but I’ll put it as just a little note, in case in the future other words like this might appear in Duolingo. If you have studied Spanish before this would be easy to understand, but here’s a few examples:</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td>Dziewczyna - Girl (teen) </td><td> Dziewczyn<span class="red-text">ka</span> - Little girl
             <tr><td>Ciasto - Cake </td><td> Ciast<span class="pink-text">ecz</span><span class="red-text">ka</span> - Cookie
             <tr><td>Skarpety - Socks </td><td> Skarpet<span class="red-text">ki</span> - Socksies
             <tr><td>Herbata - Tea (actual tea leaves) </td><td> Herbat<span class="red-text">ka</span> - Tea (anything that’s an infusion, including tea)
-        </table>
+        </table></div>
 
     </div>
 
@@ -74,7 +74,7 @@ title: Elisa's Duo Polski - Clothing
 
         <span class="section">Present tense - Czas Teraźniejszy </span>
 
-        <table>
+        <div class="table-wrap"><table>
             <thead>
                 <tr>
                     <th rowspan="3">English verb<br><br>Czasownik <br>po angielsku</th>
@@ -111,7 +111,7 @@ title: Elisa's Duo Polski - Clothing
                     <td>noszą</td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p>(Nosić - To wear) is always in Present Simple. This means someone “wears pants” as in, it is a thing they do often, but it is not in Present Continuous, as in, they might not be currently “wearing pants” right now as of this moment.
 
@@ -120,7 +120,7 @@ title: Elisa's Duo Polski - Clothing
 
         <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td> Mali ludzie noszą małe ubrania </td><td> Small people wear small clothes. </td></tr>
             <tr><td> To jest but </td><td> This is a shoe </td></tr>
             <tr><td> Te ubrania są stare </td><td> These clothes are old </td></tr>
@@ -131,7 +131,7 @@ title: Elisa's Duo Polski - Clothing
             <tr><td> Ona nosi czapkę </td><td> She wears a cap </td></tr>
             <tr><td> Ona ma now<span class="dark-blue-text">e</span> majtki </td><td> She has new panties* (remember plural nmp. adjectives end in -e.) </td></tr>
             <tr><td> On nosi star<span class="dark-blue-text">e</span> spodnie </td><td> He wears old trousers* (remember plural nmp. adjectives end in -e.) </td></tr>
-        </table>
+        </table></div>
 
     </div>
 
