--- a/lessons/checkpoint_1/13_possessive_pronouns.html
+++ b/lessons/checkpoint_1/13_possessive_pronouns.html
@@ -27,7 +27,7 @@ title: Elisa's Duo Polski - Possessive Pronouns
 
         <h2> Possessive Pronouns in Nominative </h2>
 
-        <table>
+        <div class="table-wrap"><table>
             <thead>
                 <tr>
                     <th>Number<br>Liczba</th>
@@ -103,13 +103,13 @@ title: Elisa's Duo Polski - Possessive Pronouns
                     <td>Wasz<span class="red-text">e</span></td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p>The way the possessive pronoun will change depends on the Object it’s acting upon. For example, “This is my <span class="blue-text">cat</span>”. Cat - Kot is masculine, so <span class="violet-text">my</span> will be <span class="violet-text">mój</span>. “To jest <span class="violet-text">mój</span> <span class="blue-text">kot</span>”. The gender of the owner in this case doesn’t change the inflection, but it changes which word to use when saying his or her, same as in English. For example “His cat - Jego kot”, “her cat - jej kot”. But it doesn’t matter, say, for the phrase “our cat” if the group of people is composed of men or women.</p>
 
         <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr> <th colspan="2"> <span class="blue-text"> Male Singular </span> </th></tr>
             <tr> <td> Mój <span class="blue-text">kot</span> jest mały </td><td> My cat is small </td></tr>
             <tr> <td> Twój <span class="blue-text">koń</span> je ciasteczka </td><td> Your horse is eating cookies </td></tr>
@@ -154,7 +154,7 @@ title: Elisa's Duo Polski - Possessive Pronouns
             <tr> <td> Twoje <span class="mustard-text">dziewczynki</span> </td><td> Your daughters </td></tr>
             <tr> <td> Nasze <span class="mustard-text">pomidory</span> są dobre </td><td> Our tomatoes are good </td></tr>
             <tr> <td> Wasze <span class="mustard-text">dzieci</span> lubią ciasteczka </td><td> Your children like cookies </td></tr>
-        </table>
+        </table></div>
 
     </div>
 
@@ -168,11 +168,11 @@ title: Elisa's Duo Polski - Possessive Pronouns
 
         But isn't this in accusative? You might ask, and indeed it is. But it's the only accusative Duolingo will give us up to now. That's because three pronouns in Polish are pretty stable no matter the conjugation and if you look at the table in the previous section you might have noticed.</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><th> Jej </th><th> Her </th></tr>
             <tr><th> Jego </th><th> His </th></tr>
             <tr><th> Ich </th><th> Their </th></tr>
-        </table>
+        </table></div>
 
         <p>These three pronouns stay the same throughout all cases, and so you only need to memorize them in this form. Isn't that great?</p>
 
