--- a/lessons/checkpoint_2/17_colors.html
+++ b/lessons/checkpoint_2/17_colors.html
@@ -24,7 +24,7 @@ title: Elisa's Duo Polski - Colors
 
         <h3> Adjectives - Przymiotniki </h3>
 
-        <table class="vocab-table">
+        <div class="table-wrap"><table class="vocab-table">
             <thead>
                 <tr>
                     <th class="th-top"> </th>
@@ -103,7 +103,7 @@ title: Elisa's Duo Polski - Colors
                     <td>Green, immature, unripe, raw **</td>
                 </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p>* Not in the lesson, but interesting. It also is the name of the national coin of Poland.
         ** Not in the lesson, but my girlfriend taught me this one. Many fruits are green when they are unripe, and so these two concepts coincide in Polish. As a note, they also do in Spanish and Japanese (well, except in Japanese they say blue for this concept).</p>
@@ -112,7 +112,7 @@ title: Elisa's Duo Polski - Colors
 
         <p>We only saw the noun for colors in this lesson, but reading about them I found a few more interesting ones, so why not study them here:</p>
 
-        <table class="vocab-table">
+        <div class="table-wrap"><table class="vocab-table">
             <thead>
               <tr>
                 <th rowspan="2"></th>
@@ -182,7 +182,7 @@ title: Elisa's Duo Polski - Colors
                 </tr>
                 <tr><td style="background-color:#BF9000;"></td><td colspan="4">It’s both a noun and an adjective. Gold, golden. Plus it’s the national currency unit</td></tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p>Here’s a little joke appropriate for this lesson:
 
@@ -200,13 +200,13 @@ title: Elisa's Duo Polski - Colors
 
         <p>Now, same as in English, there’s some colors that define varieties of food, such as</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td> Białe wino </td><td> White wine </td></tr>
             <tr><td> Czerwone wino </td><td> Red wine </td></tr>
             <tr><td> -- </td></tr>
             <tr><td> Białe mięso </td><td> White meat (chicken, fish, etc.) </td></tr>
             <tr><td> Czerwone mięso </td><td> Red meat (pork, beef, etc.) </td></tr>
-        </table>
+        </table></div>
 
         <p>And when we use the colors as nouns, they always stay masculine:
 
@@ -214,7 +214,7 @@ title: Elisa's Duo Polski - Colors
 
         <span class="section">Now let’s see some examples from Duolingo exercises:</span>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><th> Singular </th></tr>
             <tr><th> Masculine </th></tr>
             <tr><td> Ten ptak jest zielony </td><td> This bird is green </td></tr>
@@ -255,7 +255,7 @@ title: Elisa's Duo Polski - Colors
             <tr><td> -- </td></tr>
             <tr><th> Mixed </th></tr>
             <tr><td> Brązowa mysz je żółty ser </td><td> A brown mouse is eating yellow cheese </td></tr>
-        </table>
+        </table></div>
 
     </div>
 
@@ -280,7 +280,7 @@ title: Elisa's Duo Polski - Colors
 
         <p>Following the usual rules (for example removing -<span class="blue-text">ie</span> before the last consonant, like in pies), we add the ending -<span class="red-text">ów</span>. We could for example replace the ending for nominative plural and replace it, if it helps to visualize.</p>
 
-        <table class="vocab-table">
+        <div class="table-wrap"><table class="vocab-table">
         <thead>
           <tr>
             <th class="th-top">Nominative Singular</th>
@@ -310,14 +310,14 @@ title: Elisa's Duo Polski - Colors
             <td>kot<span class="red-text">ów</span></td>
           </tr>
         </tbody>
-        </table>
+        </table></div>
 
         <span class="section">Soft ending consonant masculine nouns in Genitive have the ending -<span class="red-text">i</span>. </span>
         <span class="section">Nouns ending in -<span class="blue-text">sz</span> and -<span class="blue-text">cz</span> end in -<span class="red-text">y</span>.</span>
 
         <p>It also works for plural nouns without singular that end in -nie.</p>
 
-        <table class="vocab-table">
+        <div class="table-wrap"><table class="vocab-table">
         <thead>
           <tr>
             <th class="th-top">Nominative Singular</th>
@@ -347,7 +347,7 @@ title: Elisa's Duo Polski - Colors
             <td>spodn<span class="red-text">i</span></td>
           </tr>
         </tbody>
-        </table>
+        </table></div>
 
         <h3> Neuter plural nouns </h3>
 
@@ -355,7 +355,7 @@ title: Elisa's Duo Polski - Colors
 
         <p>They drop the vowel at the end (-<span class="blue-text">o</span> or -<span class="blue-text">e</span>) and if after removing there are equivalent sounds for soft consonants like -<span class="blue-text">ni</span>, it is replaced by its corresponding consonant -<span class="red-text">ń</span>.</p>
 
-        <table class="vocab-table">
+        <div class="table-wrap"><table class="vocab-table">
         <thead>
           <tr>
             <th class="th-top">Nominative Singular</th>
@@ -385,13 +385,13 @@ title: Elisa's Duo Polski - Colors
             <td>ubra<span class="red-text">ń</span></td>
           </tr>
         </tbody>
-        </table>
+        </table></div>
 
         <span class="section"> Neuter nouns ending in -<span class="blue-text">ko</span> or -<span class="blue-text">ło</span> receive -<span class="red-text">e</span> before the end consonant. </span>
         
         <p>If after the removal of -<span class="blue-text">o</span> “kn” remains, it becomes -<span class="red-text">kien</span>. Also works for plural nouns without singular that end in -<span class="blue-text">ki</span>.</p>
 
-        <table class="vocab-table">
+        <div class="table-wrap"><table class="vocab-table">
         <thead>
           <tr>
             <th class="th-top">Nominative Singular</th>
@@ -421,11 +421,11 @@ title: Elisa's Duo Polski - Colors
             <td>majt<span class="red-text">ek</span></td>
           </tr>
         </tbody>
-        </table>
+        </table></div>
 
         <p>Exception:</p>
 
-        <table class="vocab-table">
+        <div class="table-wrap"><table class="vocab-table">
         <thead>
           <tr>
             <th class="th-top">Nominative Singular</th>
@@ -440,11 +440,11 @@ title: Elisa's Duo Polski - Colors
             <td>dziec<span class="red-text">i</span></td>
           </tr>
         </tbody>
-        </table>
+        </table></div>
 
         <span class="section"> Neuter nouns ending in -<span class="blue-text">ę</span> replace ending with -<span class="red-text">ąt</span>. </span>
 
-                <table class="vocab-table">
+                <div class="table-wrap"><table class="vocab-table">
         <thead>
           <tr>
             <th class="th-top">Nominative Singular</th>
@@ -459,7 +459,7 @@ title: Elisa's Duo Polski - Colors
             <td>zwierz<span class="red-text">ąt</span></td>
           </tr>
         </tbody>
-        </table>
+        </table></div>
 
 
         <h3> Femenine plural nouns and Masculine personal -a nouns </h3>
@@ -468,7 +468,7 @@ title: Elisa's Duo Polski - Colors
 
         <p> Similar to the neuter, the vowel -<span class="blue-text">a</span> is dropped. Soft endings such as -<span class="blue-text">ni</span> also get replaced with their equivalent, such as -<span class="red-text">ń</span>. Similar to neuter, -<span class="blue-text">ka</span> endings get replaced with -<span class="red-text">ek</span>. </p>
 
-        <table class="vocab-table">
+        <div class="table-wrap"><table class="vocab-table">
         <thead>
           <tr>
             <th class="th-top">Nominative Singular</th>
@@ -493,7 +493,7 @@ title: Elisa's Duo Polski - Colors
             <td>dziewczyn<span class="red-text">ek</span></td>
           </tr>
         </tbody>
-        </table>
+        </table></div>
 
     </div>
 
@@ -509,7 +509,7 @@ title: Elisa's Duo Polski - Colors
 
         For now let’s focus on the accusative and genitive, as per this lesson.</p>
 
-        <table>
+        <div class="table-wrap"><table>
         <thead>
           <tr>
             <th rowspan="2">Case <br> Przypadek</th>
@@ -549,7 +549,7 @@ title: Elisa's Duo Polski - Colors
             <td colspan="2">-ych/ich</td>
           </tr>
         </tbody>
-        </table>
+        </table></div>
 
         <p>Now, remember the accusative for masculine nouns gets split into mimicking Genitive for Male animate nouns and staying in Nominative for Male inanimate nouns, which is why accusative is also in this lesson. 
 
@@ -559,7 +559,7 @@ title: Elisa's Duo Polski - Colors
 
         <p>Remember sentences can be Genitive because of negative accusative.</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><th> Singular </th>
             <tr><th> Masculine nouns </th>
             <tr><td> Twój syn nie nosi biał<span class="red-text">ego</span> kapelusz<b>a</b> </td><td> Your son does not wear a white hat </td></tr>
@@ -586,7 +586,7 @@ title: Elisa's Duo Polski - Colors
             <tr><th> Neutral </th>
             <tr><td> Nie mamy żółt<span class="red-text">ych</span> zwierz<b>ąt</b> </td><td> We don’t have yellow animals </td></tr>
             <tr><td> On nie je zielon<span class="red-text">ych</span> jabł<b>ek</b> </td><td> He does not eat green apples </td></tr>
-        </table>
+        </table></div>
 
     </div>
 
