--- a/lessons/checkpoint_1/14_pronouns_1.html
+++ b/lessons/checkpoint_1/14_pronouns_1.html
@@ -20,10 +20,10 @@ title: Elisa's Duo Polski - Pronouns 1
     <div class="regular">
         <p>This lesson focuses on object pronouns. That is, we answer what the verb of the sentence directly affects or acts on. Instead of using a noun, we use a pronoun. For example:</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td> Kocham tego psa </td><td> I love this dog </td></tr>
             <tr><td> Kocham cię </td><td> I love you </td></tr>
-        </table>
+        </table></div>
 
         <p>Both of these examples are in the accusative case, except one uses a pronoun and the other does not. Technically, in Polish all that happens is that the original pronouns we all know by now (ja, ty, on, ona, ono, my, wy, oni, one) get their declensions in accusative or genitive. While there are many cases for these pronouns and you can see a more detailed table in the reference below, this lesson focuses on accusative or genitive. You can see more at:
         <a href="https://www.clozemaster.com/blog/polish-personal-pronouns/">https://www.clozemaster.com/blog/polish-personal-pronouns/</a>
@@ -32,7 +32,7 @@ title: Elisa's Duo Polski - Pronouns 1
 
         <h2> Accusative and Genitive Pronouns </h2>
 
-        <table>
+        <div class="table-wrap"><table>
             <colgroup>
                 <col span="6">
                 <col style="background: #e5e5e5;">
@@ -121,21 +121,21 @@ title: Elisa's Duo Polski - Pronouns 1
                 <td>them</td>
               </tr>
             </tbody>
-        </table>
+        </table></div>
 
         <p>Now, the English translation stays the same because we are only seeing genitive cases in the form of negative sentences. Remember, the negative of accusative sentences is always in genitive. You can see in my table I included "to". It's not a pronoun, but we're gonna use it frequently and in this lesson too. For example:</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td> Lubię to </td><td> I like it (accusative)</td></tr>
             <tr><td> Nie lubię <span class="red-text">tego</span> </td><td> I do not like it (Genitive because of negative) </td></tr>
             <tr><td> Ona <span class="red-text">tego</span> nie słyszy </td><td> She doesn’t hear this</td></tr>
-        </table>
+        </table></div>
 
         <h3> Normal and Emphatic forms </h3>
 
         <p>Here we can notice some of the pronouns have two forms. <span class="violet-text">Purple</span> indicates <span class="violet-text">emphatic</span> forms, and orange indicates the normal forms. They are also called the <span class="violet-text">long</span> and short forms. They are used in different contexts and honestly, this lesson is not so clear on when to use them, but we can get a feeling of a few rules just by the usage. Now what is this about emphatic and normal forms? It’s better to see an example:</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td> Kocham <span class="mustard-text">cię</span> </td><td> I love you </td></tr>
             <tr><td> Też <span class="mustard-text">cię</span> kocham </td><td> I love you too </td></tr>
             <tr><td> - </td></tr>
@@ -146,7 +146,7 @@ title: Elisa's Duo Polski - Pronouns 1
             <tr><td> Kochasz <span class="mustard-text">go</span> </td><td> You love him </td></tr>
             <tr><td> Nie znają <span class="mustard-text">go</span> </td><td> They don’t know him </td></tr>
             <tr><td> Kocham <span class="violet-text">ciebie</span>, nie <span class="violet-text">jego</span>! </td><td> I love you, not him! </td></tr>
-        </table>
+        </table></div>
 
         <p>In this lesson we can see from observation that <span class="mustard-text">cię</span> is usually at the end of sentences, unless in response like też cię kocham. What indeed could be the rule hidden here?
         <span class="violet-text">Ciebie</span> is used in the middle of sentences instead, or to emphasize even in other places.
@@ -166,9 +166,9 @@ title: Elisa's Duo Polski - Pronouns 1
             <li> When a pronoun is stressed for emphasis or clarification.</li>
         </ol>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td> Kocham <span class="violet-text">ciebie</span>, nie <span class="violet-text">jego</span>! </td><td> I love <i><u>you</u></i>, not <i><u>him</u></i>!</td></tr>
-        </table>
+        </table></div>
 
         <p>This sentence makes more sense if you say it in your head dramatically, emphasizing the pronouns to make a point. Although <i>jego</i> can also be used for possession as in a previous example.</p>
 
@@ -176,7 +176,7 @@ title: Elisa's Duo Polski - Pronouns 1
 
         <p>Only two pronouns are different in <span class="blue-text">accusative</span> and in <span class="red-text">genitive</span>: her and non-masculine them. So we can think, if it’s 3rd person and the subject involves at least one woman, it’s different in accusative and genitive. Let’s see some examples:</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td> Ona lubi <span class="blue-text">ją</span> </td><td> She likes her </td></tr>
             <tr><td> Nie kochamy <span class="red-text">jej</span> </td><td> We don’t love her </td></tr>
             <tr><td> Ten kot <span class="red-text">jej</span> nie lubi </td><td> This cat doesn’t like her </td></tr>
@@ -185,7 +185,7 @@ title: Elisa's Duo Polski - Pronouns 1
             <tr><td> Widzisz <span class="blue-text">ich</span>? </td><td> Do you see them? (male group, or group with at least one male) </td></tr>
             <tr><td> Nie widzę <span class="red-text">ich</span>? </td><td> I don't see them (non-male group) </td></tr>
             <tr><td> Ta kobieta <span class="blue-text">je</span> lubi </td><td> This woman likes them (femenine nouns and children groups) </td></tr>
-        </table>
+        </table></div>
 
     </div>
 
@@ -196,7 +196,7 @@ title: Elisa's Duo Polski - Pronouns 1
         <p>In this lesson, we find that the word order of pronouns is not the same as in English, and that there’s a bit of confusion amongst the comments. The word order can dictate emphasis of the subjects, but it’s also mainly just getting used to how Polish sounds. In general we avoid putting a pronoun at the end of a sentence if there’s somewhere else to put it. We also avoid negating the pronouns, instead negating the verbs. To gain some feeling of how the order goes, let’s do some practice examples:
         We can see a few patterns. These are all my personal observations, not grammar rules, but I hope they can help.</p>
 
-        <table class="mini-table">
+        <div class="table-wrap"><table class="mini-table">
             <tr><td> Kochasz <u>mnie</u>? </td><td> Do you love me? </td></tr>
             <tr><td> On <u>mnie nie słyszy</u> </td><td> He doesn’t hear me </td></tr>
             <tr><td> Tamten koń <u>nas nie zna</u> </td><td> That horse doesn’t know us </td></tr>
@@ -210,7 +210,7 @@ title: Elisa's Duo Polski - Pronouns 1
             <tr><td> Oni was <u>nie lubią</u> </td><td> They don’t like you </td></tr>
             <tr><td> Nie znamy <u>was</u> </td><td> We don’t know you </td></tr>
             <tr><td> Czy ja <u>was znam</u>? </td><td> Do I know you? </td></tr>
-        </table>
+        </table></div>
 
         <p>We can see that the pronoun always goes behind the verb, and that the negation always comes in between them. The only case is when the sentence is basically a verb and a pronoun, in which case the pronoun does go to the end.</p>
  
